--- a/example/src/template.html
+++ b/example/src/template.html
@@ -8,7 +8,7 @@
         <title>Example app</title>
 
         <link rel='icon' type='image/png' href='./favicon.png'>
-        <link rel='stylesheet' href='./global.css'>
+        <link rel='stylesheet' href='/global.css'>
         <link rel='stylesheet' href='./bundle.css'>
 
         <script defer src='./bundle.js'></script>
