Added: A console message that queries have been preprocessed Edited: The template.html of the example Edited: The README

--- a/example/src/template.html
+++ b/example/src/template.html
@@ -4,8 +4,10 @@
     <head>
         <meta charset='utf-8'>
         <meta name='viewport' content='width=device-width,initial-scale=1'>
+        <meta name="Description" content="Showcasing some cool JungleJS.">
 
-        <title>Example app</title>
+        <title>Example JungleJS App</title>
+        
 
         <link rel='icon' type='image/png' href='./favicon.png'>
         <link rel='stylesheet' href='/global.css'>
