--- a/example/src/template.html
+++ b/example/src/template.html
@@ -9,7 +9,7 @@
         <title>Example JungleJS App</title>
         
 
-        <link rel='icon' type='image/png' href='./favicon.png'>
+        <link rel='icon' type='image/png' href='/favicon.png'>
         <link rel='stylesheet' href='/global.css'>
         <link rel='stylesheet' href='./bundle.css'>
 
