--- a/example/src/template.html
+++ b/example/src/template.html
@@ -11,12 +11,14 @@
 
         <link rel='icon' type='image/png' href='/favicon.png'>
         <link rel='stylesheet' href='/global.css'>
-        <link rel='stylesheet' href='./bundle.css'>
+
+        {jungle.export.style}
 
         <script defer src='./bundle.js'></script>
     </head>
 
     <body>
+        {jungle.export.html}
     </body>
 
 </html>
