--- a/example/src/template.html
+++ b/example/src/template.html
@@ -11,8 +11,7 @@
 
         <link rel='icon' type='image/png' href='/favicon.png'>
         <link rel='stylesheet' href='/global.css'>
-
-        {jungle.export.style}
+        <link rel='stylesheet' href='./bundle.css'>
 
         <script defer src='./bundle.js'></script>
     </head>
