--- a/example/src/template.html
+++ b/example/src/template.html
@@ -11,9 +11,9 @@
 
         <link rel='icon' type='image/png' href='/favicon.png'>
         <link rel='stylesheet' href='/global.css'>
-        <link rel='stylesheet' href='./bundle.css'>
+        <link rel='stylesheet' href='bundle.css'>
 
-        <script defer src='./bundle.js'></script>
+        <script defer src='bundle.js'></script>
     </head>
 
     <body>
